--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,18 +17,16 @@
       </nav>
     </header>
     <main role="main">
-      <div class="container">
-        <div class="content">
-           <div class="row">
-            <div class="span12">
-              <%= render 'layouts/messages' %>
-              <%= yield %>
-            </div>
+      <div class="container-fluid">
+        <div class="row-fluid">
+          <div class="span12">
+            <%= render 'layouts/messages' %>
+            <%= yield %>
           </div>
-          <footer>
-          </footer>
         </div>
       </div>
+
+      <footer></footer>
     </main>
   </body>
 </html>
