--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,8 @@
  *
  *= require_self
  *= require_tree .
+ *= require _font-awesome
+ *= require bootstrap-datetimepicker
  */
 .content {
  background-color: #eee;
