--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -16,7 +16,7 @@
     <tbody>
       <% @stories.each do |story| %>
         <tr>
-          <td><%= story.pivotal_id %><%= link_to 'Create story', '', :class => 'btn' %></td>
+          <td id="pivotal_id"><%= story.pivotal_id %><%= link_to 'Create story', {:action => 'create_pivotal_story', :id => story.id}, {:class => 'btn', :remote => true} unless story.pivotal_id %></td>
           <td><%= story.title %></td>
           <td><%= story.story_type %></td>
           <td><%= story.assigned_to %></td>
